@@ -29,6 +29,10 @@
 - automatic cover fetching from amazon.com (Lee Willis)
 
 - drag album covers from nautilus to the gnome foot icon
+- dnd from album/song/group windows to playlist
 
-- groups: include a "Single songs" group.. songs without associated album, smart group creation.
-- add windows not staying open can be inconvenient
+- use 2.6 filesel
+- support gstreamer 0.7
+
+- groups: include a "Single songs" group.. songs without associated album, smart group creation. (and "never played", "most played"), menuitem to create groups from genres.. 
+   'Select groups' button in main ui without editnig support, includes genres + 'never played' by default
